fixed cropper broder, replaced img with div

--- a/src/app/shared/components/image-upload-v3/image-upload-v3.component.scss
+++ b/src/app/shared/components/image-upload-v3/image-upload-v3.component.scss
@@ -159,29 +159,40 @@ h3 {
 }
 
 image-cropper ::ng-deep .overlay > .corner {
+  width: 21px;
+  height: 21px;
   z-index: 2;
   position: absolute;
   transform-origin: center center;
 }
 
+$border-color: #646464;
 image-cropper ::ng-deep .overlay > .corner {
   &.topleft {
+    border-top: 2px solid $border-color;
+    border-left: 2px solid $border-color;
     left: 0;
     top: 0;
   }
   &.topright {
+    border-top: 2px solid $border-color;
+    border-right: 2px solid $border-color;
     right: 0;
     top: 0;
-    transform: rotate(90deg);
+    // transform: rotate(90deg);
   }
   &.bottomleft {
+    border-bottom: 2px solid $border-color;
+    border-left: 2px solid $border-color;
     left: 0;
     bottom: 0;
-    transform: rotate(270deg);
+    // transform: rotate(270deg);
   }
   &.bottomright {
+    border-bottom: 2px solid $border-color;
+    border-right: 2px solid $border-color;
     bottom: 0;
     right: 0;
-    transform: rotate(180deg);
+    // transform: rotate(180deg);
   }
 }
